// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RelayFieldHandleTransform matches expected output: linked-handle-field.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
fragment LinkedHandleField on User {
  friends(first: 10) @__clientField(handle: "clientFriends") {
    count
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
fragment LinkedHandleField on User {
  friends: __friends_clientFriends {
    count
  }
}

`;

exports[`RelayFieldHandleTransform matches expected output: linked-handle-field-filter.ql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
fragment LinkedHandleField on User {
  friends(first: 10, orderby: $orderby) @__clientField(handle: "clientFriends", filters: ["first", "orderby"]) {
    count
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
fragment LinkedHandleField on User {
  friends: __friends_clientFriends(first: 10, orderby: $orderby) {
    count
  }
}

`;

exports[`RelayFieldHandleTransform matches expected output: scalar-handle-field.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
fragment ScalarHandleField on User {
  name @__clientField(handle: "clientName")
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
fragment ScalarHandleField on User {
  name: __name_clientName
}

`;
